--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,10 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <sonar.projectKey>tyutyutyu_oo4j</sonar.projectKey>
+        <sonar.organization>tyutyutyu</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
 </project>
