--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,8 @@ jobs:
 
       - name: Set up JDK 11
         uses: actions/setup-java@v2
-        with:
+        with
+          distribution: adopt
           java-version: 11
 
       - name: Cache Gradle packages
