--- a/oo4j-core/build.gradle
+++ b/oo4j-core/build.gradle
@@ -1,3 +1,5 @@
+import javax.xml.datatype.XMLGregorianCalendar
+
 plugins {
     id 'io.freefair.lombok' version '6.3.0'
     id 'jacoco'
@@ -40,6 +42,9 @@ tasks.test {
     maxHeapSize = "1G"
     finalizedBy(tasks.jacocoTestReport)
     testLogging.showStandardStreams = true
+    reports {
+        junitXml.enabled = true
+    }
 }
 
 tasks.jacocoTestReport {
