Debug Sonarcloud config

--- a/oo4j-core/build.gradle
+++ b/oo4j-core/build.gradle
@@ -89,7 +89,7 @@ sonarqube {
         property("sonar.sources", "src/main")
         property("sonar.tests", "src/test")
         property("sonar.java.binaries", "build/classes/java/main")
-        property("sonar.java.test.binaries", "build/classes/java/main/test")
+        property("sonar.java.test.binaries", "build/classes/java/test")
         property("sonar.junit.reportPaths", "build/test-results/test/")
         property("sonar.debug", "true")
     }
