--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,18 @@ sonarqube {
     properties {
         property "sonar.host.url", "https://sonarcloud.io"
         property "sonar.organization", "tyutyutyu"
-        property "sonar.language", "java"
         property "sonar.sourceEncoding", "UTF-8"
+        property "sonar.debug", "true"
+    }
+}
+
+subprojects {
+    sonarqube {
+        properties {
+            property "sonar.sources", "src/main"
+            property "sonar.tests", "src/test"
+            // I was testing with JaCoCo, so the next line is not needed if you're using some other tool
+            property "sonar.coverage.jacoco.xmlReportPaths", "../build/reports/jacoco/codeCoverageReport/codeCoverageReport.xml"
+        }
     }
 }
