--- a/build.gradle
+++ b/build.gradle
@@ -8,16 +8,7 @@ sonarqube {
         property "sonar.organization", "tyutyutyu"
         property "sonar.sourceEncoding", "UTF-8"
         property "sonar.debug", "true"
-    }
-}
-
-subprojects {
-    sonarqube {
-        properties {
-            property "sonar.sources", "src/main"
-            property "sonar.tests", "src/test"
-            // I was testing with JaCoCo, so the next line is not needed if you're using some other tool
-            property "sonar.coverage.jacoco.xmlReportPaths", "../build/reports/jacoco/codeCoverageReport/codeCoverageReport.xml"
-        }
+        property "sonar.log.level", "TRACE"
+        property "sonar.verbose", "true"
     }
 }
