--- a/oo4j-core/build.gradle
+++ b/oo4j-core/build.gradle
@@ -85,10 +85,11 @@ sonarqube {
     properties {
         property("sonar.java.source", "11")
         property("sonar.java.target", "11")
-        property("sonar.sources", "src/main")
-        property("sonar.tests", "src/test")
+        property("sonar.sources", "src/main/java")
+        property("sonar.tests", "src/test/java")
         property("sonar.java.binaries", "build/classes/java/main")
         property("sonar.java.test.binaries", "build/classes/java/test")
         property("sonar.junit.reportPaths", "build/test-results/test/")
+        property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
     }
 }
